--- a/styles/style_home_section_o_que_fazemos.css
+++ b/styles/style_home_section_o_que_fazemos.css
@@ -37,6 +37,7 @@
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   gap: 2rem;
   margin-top: 3rem;
+  justify-items: center
 }
 
 .servico-card {
