--- a/styles/style_enhanced.css
+++ b/styles/style_enhanced.css
@@ -365,3 +365,66 @@ header {
       }
 }
 
+
+
+.whatsapp-float {
+  position: fixed;
+  bottom: 25px;
+  right: 25px;
+  width: 65px;
+  height: 65px;
+  background-color: #25D366;
+  color: white;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 32px;
+  z-index: 999;
+  box-shadow: 0 12px 24px rgba(0, 0, 0, 0.25);
+  /* animation: bounceSmooth 2.4s ease-in-out infinite; */
+    animation: bounceIntenso 1.8s infinite;
+  transition: all 0.3s ease;
+}
+
+.whatsapp-float:hover {
+  transform: scale(1.15);
+  box-shadow: 0 0 15px #25D366, 0 0 30px rgba(37, 211, 102, 0.6);
+}
+
+/* Bounce mais suave */
+@keyframes bounceSmooth {
+  0%, 100% {
+    transform: translateY(0);
+  }
+  30% {
+    transform: translateY(-10px);
+  }
+  60% {
+    transform: translateY(-5px);
+  }
+}
+
+@keyframes bounceIntenso {
+  0%, 100% {
+    transform: translateY(0px);
+  }
+  /* 10% {
+    transform: translateY(-12px);
+  }
+  30% {
+    transform: translateY(0);
+  } */
+  50% {
+    transform: translateY(-20px);
+  }
+  /* 70% {
+    transform: translateY(0);
+  }
+  85% {
+    transform: translateY(-4px);
+  }
+  95% {
+    transform: translateY(0);
+  } */
+}
