--- a/styles/style_home_section_hero_top.css
+++ b/styles/style_home_section_hero_top.css
@@ -22,6 +22,11 @@
     text-align: left;
     margin: 0 auto;
   }
+
+  /* .hero-content p {
+    margin-bottom: 0px;
+    padding: 0;
+  } */
   
   .hero h1 {
     font-family: 'Montserrat', sans-serif;
@@ -34,8 +39,8 @@
   
   .hero p {
     font-size: clamp(1rem, 2.5vw, 1.2rem); /* Tamanho responsivo */
-    margin-bottom: 2rem;
-    line-height: 1.6;
+    margin-bottom: 0.7rem;
+    line-height: 1.3;
     max-width: 600px;
   }
   
